2010-03-12  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR middle-end/42431
	* gcc/config/rs6000/rs6000.c (rs6000_emit_move): Delete band-aid
	code added to work around reload clobbering CONST insns.

2010-03-02  Jeff Law  <law@redhat.com>

	PR middle-end/42431
	* reload1.c (rtx_p, substitute_stack): Declare.
	(substitute): Record addresses of changed rtxs.
	(gen_reload_chain_without_interm_reg_p): Don't use copy_rtx anymore.
	Restore the original rtx when complete.
	(reload): Free subsitute_stack when complete.

2010-02-25  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR target/43154
	* config/rs6000/vector.md (VEC_64): New iterator for V2DF, V2DI.
	(vec_interleave_high<mode>): Rename from vec_interleave_highv2df
	and support both V2DF and V2DI modes.
	(vec_interleave_low<mode>): Rename from vec_interleave_lowv2df and
	support both V2DF and V2DI modes.
	(general): Delete trailing whitespace from a few patterns.

	* config/rs6000/rs6000-c.c (altivec_overloaded_builtins): Add
	V2DF/V2DI interleave high/low builtins.

	* config/rs6000/rs6000-builtin.def (VSX_BUILTIN_VEC_MERGE*): Add
	new VSX builtins.

	* config/rs6000/rs6000.c (bdesc_2arg): Add support for V2DF/V2DI
	interleave high/low functions.

2009-11-20  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR target/41787
	* config/rs6000/rs6000.c (struct machine_function): Revert
	2009-10-23 change to set VRSAVE to non-0 if we use VSX.
	(rs6000_expand_to_rtl_hook): Ditto.
	(rs6000_check_vector_mode): Ditto.
	(compute_vrsave_mask): Ditto.

2010-03-26  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR tree-optimization/43544
	* doc/tm.texi (TARGET_VECTORIZE_BUILTIN_VECTORIZED_FUNCTION):
	First argument for builtin vectorized function hook is now a
	tree to be able to distinguish between machine specific and
	standard builtins.
	* targhooks.c (default_builtin_vectorized_function): Ditto.
	* targhooks.h (default_builtin_vectorized_function): Ditto.
	* target.h (struct gcc_target): Ditto.